done with citations, chapters titles have been centered

--- a/jet_calibration.tex
+++ b/jet_calibration.tex
@@ -26,7 +26,7 @@ This is shown in Figure~\ref{fig:jes_jer}.
 The JES is seen to be almost unity within 1\%. across a broad kinematic range.
 The JER is smaller for jets with higher transverse momentum, and depends on centrality.
 It is the largest in central collisions and gets better for more peripheral collisions.
-The JER can be fit to the form \cite{Aad:hi_jets}:
+The JER can be fit to the form \cite{2013220}:
 
 \begin{align}
 \frac{\sigma[\Delta \Et]}{E_{\rm T}^{\rm true}} = \frac{a}{\sqrt{E_{\rm T}^{\rm true}}} \oplus \frac{b}{E_{\rm T}^{\rm true}} \oplus c
