--- a/jets.tex
+++ b/jets.tex
@@ -161,7 +161,7 @@ Figure from Ref.~\cite{Weller:2017tsr}.}
 The second source of modification is the formation of the hot and dense quark gluon plasma.
 The hot nuclear matter effects further serve as an independent confirmation that the medium formed is strongly interacting.
 Jets are formed early enough that they traverse the Quark Gluon Plasma and as strongly interacting particles, are both affected by, and affect the QGP.
-This interaction typically results in the jet losing energy and forward momentum \cite{Chatrchyan:2012nia, ATLAS:2017wvp}, with the lost energy being deposited in the medium \cite{Khachatryan2016}.
+This interaction typically results in the jet losing energy and forward momentum \cite{Chatrchyan:2012nia, 2019108}, with the lost energy being deposited in the medium \cite{Khachatryan2016}.
 Jets can also pick up momentum transverse to the parton direction.
 The hot nuclear matter effects can be considered to be a combination of collisional and radiative energy losses summarized in Figure~\ref{fig:jetEnergyLoss}.
 
