--- a/latex/atlaspackage.sty
+++ b/latex/atlaspackage.sty
@@ -181,7 +181,7 @@
   \fi
 
   % Remove dots in table of contents
-  \renewcommand{\cftdot}{}
+%  \renewcommand{\cftdot}{}
 
   % Typset anything with units using this package - also has very useful table formatting
   % Declare a few options and standard units for siunitx that are otherwise missing
