--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -28,7 +28,14 @@
 \usepackage{tabularx}
 \usepackage{booktabs}
 \usepackage{subcaption}
-
+%\usepackage{sectsty}
+%\chapterfont{\centering}
+\usepackage[pagestyles]{titlesec}
+ 
+\titleformat{\chapter}[display]
+   {\normalfont\huge\bfseries\centering}{\centering\chaptertitlename\ \thechapter}{20pt}{\Huge}
+\titlespacing*{\chapter}
+   {0pt}{50pt}{40pt}
 
 %\usepackage[backend=bibtex]{\ATLASLATEXPATH atlaspackage}
 %\usepackage[showdoi=false,backref=true,block=ragged]{\ATLASLATEXPATH atlasbiblatex}
@@ -49,6 +56,7 @@
 ]{biblatex}
 
 \renewbibmacro{in:}{}
+
 \DeclareFieldFormat{string+doi}{%
 \iffieldundef{doi}{#1}{\href{http://dx.doi.org/\thefield{doi}}{#1}}}
 \renewbibmacro*{journal+issuetitle}{%
@@ -93,7 +101,6 @@ pages = {}
 \AtEveryBibitem{
 \ifentrytype{article}{\clearfield{number}}{}
 \ifentrytype{article}{\clearfield{issn}}{}}
-
 
 \usepackage{hyperref}
 \hypersetup{
