centered abstract, fixed copywrite page

--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -138,6 +138,7 @@ pages = {}
 %% Create an abstract that can also be used for the ProQuest abstract.
 %% Note that ProQuest truncates their abstracts at 350 words.
 \setcounter{page}{2}
+\renewcommand\abstractname{\textsc{ABSTRACT}}
 \begin{abstract}
 
 Heavy ion collision experiments have been centered around studying the extreme state of matter formed in such collisions, the quark-gluon plasma.
