1st version for committee

--- a/cuts_corrections.tex
+++ b/cuts_corrections.tex
@@ -43,7 +43,7 @@ The isolation cut removes approximately 0.01\% of jets (see Figure \ref{fig:ISO}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.75\textwidth]{figures/main/performance/jet_iso.pdf}
+\includegraphics[width=0.70\textwidth]{figures/main/performance/jet_iso.pdf}
 \caption{The ratios of the jet spectra with no isolation to that with isolation in the kinematic range of interest for \pbpb\ collisions, in all centralities.
 The isolation requirement rejects less that 0.1\% of jets, and has almost no impact on the final measurement.}
 \label{fig:ISO}
@@ -384,7 +384,7 @@ The number of UE particles associated with a jet decreases with size of the annu
 \begin{subfigure}{.5\textwidth}
 \centering \includegraphics[width=1\textwidth]{figures/main/UE/eta_phi_map_trk2_dR0}
 \caption{}
-\end{subfigure}
+\end{subfigure} \quad
 \begin{subfigure}{.5\textwidth}
 \centering \includegraphics[width=1\textwidth]{figures/main/UE/eta_phi_map_trk6_dR0}
 \caption{}
@@ -392,7 +392,7 @@ The number of UE particles associated with a jet decreases with size of the annu
 \begin{subfigure}{.5\textwidth}
 \centering \includegraphics[width=1\textwidth]{figures/main/UE/eta_phi_map_trk2_dR5}
 \caption{}
-\end{subfigure}
+\end{subfigure}  \quad
 \begin{subfigure}{.5\textwidth}
 \centering \includegraphics[width=1\textwidth]{figures/main/UE/eta_phi_map_trk6_dR5}
 \caption{}
@@ -400,7 +400,7 @@ The number of UE particles associated with a jet decreases with size of the annu
 \begin{subfigure}{.5\textwidth}
 \centering \includegraphics[width=1\textwidth]{figures/main/UE/eta_phi_map_trk2_dR9}
 \caption{}
-\end{subfigure}
+\end{subfigure} \quad
 \begin{subfigure}{.5\textwidth}
 \centering \includegraphics[width=1\textwidth]{figures/main/UE/eta_phi_map_trk6_dR9}
 \caption{}
@@ -829,7 +829,7 @@ central \pbpb\ and \pp\ collisions, and is seen to be unity.
 
 \begin{figure}
 \centering
-\includegraphics[width=0.7\textwidth]{figures/main/general/MergedBinCheck.pdf}
+\includegraphics[width=0.6\textwidth]{figures/main/general/MergedBinCheck.pdf}
 \caption{The \Dptr\ distributions in \pp\ and 0--10\% central \pbpb, constructed using a single bin from 1--4 GeV (merging the first three \pt\ bins in this analysis) compared to the \Dptr\ distributions constructed by adding up the bins individually: \mbox{1--1.6 GeV}, \mbox{1.6--2.5 GeV} and \mbox{2.5--4 GeV}.
 This comparison tests the robustness of the angular bin by bin correction and its dependence on the width of the \pt\ bins.}
 \label{fig:MergedBinCheck}
