--- a/jet_reconstruction.tex
+++ b/jet_reconstruction.tex
@@ -6,7 +6,7 @@ It is different from the procedure for \pp\ collisions because of the large unde
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=\textwidth]{figures/setup/atlasHIjetReco} %
+	\includegraphics[width=0.7\textwidth]{figures/setup/atlasHIjetReco} %
 	\caption{A schematic of the ATLAS jet reconstruction procedure.
 	Inset figures from Refs.~\cite{Cacciari:2008gp, atlasRun1EventDisplay, ATLAS-COM-PHYS-2011-1733, Cole:1450219, perfPlots}.}	
 	\label{fig:atlasHIjetreco}%
