--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -105,11 +105,14 @@ pages = {}
 \usepackage{hyperref}
 \hypersetup{
      colorlinks = true,
-     linkcolor = blue,
-     anchorcolor = blue,
+     linkcolor = magenta, 
      citecolor = blue,
-     filecolor = blue,
-     urlcolor = blue,}
+     urlcolor = red,}
+
+%     linkcolor = red: contents, figure refs, section refs, cited on page__
+%     citecolor = blue: citations [ ] ,
+%     urlcolor = cyan: hyperlinks in citations
+
 
 
 \input{macros}
