--- a/uncert.tex
+++ b/uncert.tex
@@ -249,7 +249,7 @@ The impact of the modification of the fragmentation process in \PbPb\ compared t
 
 \begin{table}[h]
 \centering
-\begin{tabular}{ | m{3cm} | m{3cm} | m{3cm} | m{3cm} |}
+\begin{tabular}{ | >{\centering\arraybackslash}m{3cm} | >{\centering\arraybackslash} m{3cm} | >{\centering\arraybackslash} m{3cm} | >{\centering\arraybackslash}m{3cm} |}
 \hline
 \textbf{Uncertainty} & \textbf{\pp\ and \PbPb\ correlated} & \textbf{Point-to-point correlated} & \textbf{One/two sided or symmetrized} \\ \hline
 JES (\pp) & yes & yes & two sided \\ \hline
