thesis with extended contents, fixed some citation doi's

--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -759,7 +759,7 @@
 	number			=	"1",
 	pages			=	"1-27",
 	year			=	"2005",
-	doi				=	"https://doi.org/10.1016/j.nuclphysa.2005.02.130",
+	doi				=	"10.1016/j.nuclphysa.2005.02.130",
 	url				=	"http://www.sciencedirect.com/science/article/pii/S0375947405002770",
 	author			=	"{BRAHMS Collaboration}",
 }
@@ -789,7 +789,7 @@
 	year			=	"2006",
 	eprint			=	"nucl-th/0511046",
 	archivePrefix	=	"arXiv",
-	doi				=	"https://doi.org/10.1016/j.physletb.2006.03.060",
+	doi				=	"10.1016/j.physletb.2006.03.060",
 	url				=	"http://www.sciencedirect.com/science/article/pii/S0370269306003996",
 	author			=	"Tetsufumi Hirano and Ulrich Heinz and Dmitri Kharzeev and Roy Lacey and Yasushi Nara",
 }
@@ -897,7 +897,7 @@
 	pages			=	"241-244",
 	year			=	"1976",
 	issn			=	"0370-2693",
-	doi				=	"https://doi.org/10.1016/0370-2693(76)90517-7",
+	doi				=	"10.1016/0370-2693(76)90517-7",
 	url				=	"http://www.sciencedirect.com/science/article/pii/0370269376905177",
 	author			=	"G. Baym and S.A. Chin",
 }
@@ -1176,7 +1176,7 @@
 	pages			=	"199-236",
 	year			=	"1976",
 	issn			=	"0550-3213",
-	doi				=	"https://doi.org/10.1016/0550-3213(76)90586-1",
+	doi				=	"10.1016/0550-3213(76)90586-1",
 	url				=	"http://www.sciencedirect.com/science/article/pii/0550321376905861",
 	author			=	"John Kogut and D.K. Sinclair and Leonard Susskind",
 }
@@ -1684,7 +1684,7 @@
 
 @article{2013220,
 	title			=	"{Measurement of the jet radius and transverse momentum dependence of inclusive jet suppression in lead-lead collisions at $\sqrtsnn = 2.76$ TeV with the ATLAS detector}",
-	doi				=	"https://doi.org/10.1016/j.physletb.2013.01.024",
+	doi				=	"10.1016/j.physletb.2013.01.024",
 	url				=	"http://www.sciencedirect.com/science/article/pii/S037026931300049X",
 	author			=	"{ATLAS Collaboration}",
 	collaboration	=	"ATLAS Collaboration",
@@ -1844,7 +1844,7 @@
 	pages			=	"291-320",
 	year			=	"1997",
 	issn			=	"0550-3213",
-	doi				=	"https://doi.org/10.1016/S0550-3213(96)00553-6",
+	doi				=	"10.1016/S0550-3213(96)00553-6",
 	url				=	"http://www.sciencedirect.com/science/article/pii/S0550321396005536",
 	author			=	"R. Baier and Yu.L. Dokshitzer and A.H. Mueller and S. Peigné and D. Schiff",
 }
@@ -1904,7 +1904,7 @@
 	pages			=	"275-278",
 	year			=	"1983",
 	issn			=	"0370-2693",
-	doi				=	"https://doi.org/10.1016/0370-2693(83)90437-9",
+	doi				=	"10.1016/0370-2693(83)90437-9",
 	url				=	"http://www.sciencedirect.com/science/article/pii/0370269383904379",
 	author			=	"{European Muon Collaboration}",
 }
@@ -1985,7 +1985,7 @@
 	pages			=	"67-88",
 	year			=	"2016",
 	issn			=	"0370-2693",
-	doi				=	"https://doi.org/10.1016/j.physletb.2016.04.050",
+	doi				=	"10.1016/j.physletb.2016.04.050",
 	url				=	"http://www.sciencedirect.com/science/article/pii/S037026931630123X",
 	author			=	"{ATLAS Collaboration}",
 }
@@ -2057,7 +2057,7 @@
 	pages			=	"298-318",
 	year			=	"1977",
 	issn			=	"0550-3213",
-	doi				=	"https://doi.org/10.1016/0550-3213(77)90384-4",
+	doi				=	"10.1016/0550-3213(77)90384-4",
 	url				=	"http://www.sciencedirect.com/science/article/pii/0550321377903844",
 	author			=	"G. Altarelli and G. Parisi",
 }
@@ -2742,7 +2742,7 @@
 	number			=	"1",
 	pages			=	"102-183",
 	year			=	"2005",
-	doi				=	"https://doi.org/10.1016/j.nuclphysa.2005.03.085",
+	doi				=	"10.1016/j.nuclphysa.2005.03.085",
 	url				=	"http://www.sciencedirect.com/science/article/pii/S0375947405005294",
 	author			=	"{STAR Collaboration}"
 }
@@ -2772,7 +2772,7 @@
 	eprint			=	"1509.07324",
 	archivePrefix	=	"arXiv",
 	primaryClass	=	"nucl-ex",
-	doi				=	"https://doi.org/10.1016/j.physletb.2016.01.020",
+	doi				=	"10.1016/j.physletb.2016.01.020",
 	url				=	"http://www.sciencedirect.com/science/article/pii/S0370269316000320",
 	author			=	"{ALICE Collaboration}"
 }
@@ -2863,7 +2863,7 @@
 	pages			=	"71-158",
 	year			=	"1980",
 	issn			=	"0370-1573",
-	doi				=	"https://doi.org/10.1016/0370-1573(80)90105-2",
+	doi				=	"10.1016/0370-1573(80)90105-2",
 	url				=	"http://www.sciencedirect.com/science/article/pii/0370157380901052",
 	author			=	"Edward V. Shuryak",
 }
