typos from Lance fixed

--- a/jets.tex
+++ b/jets.tex
@@ -132,7 +132,7 @@ It results in $R_a^A (x, Q^2) > 1$  over the $x > 0.8$ region for $Q^2$ of the o
 \end{itemize}
 
 CNM effects are experimentally measured using $p+A$ systems where the size and shape of the plasma, and hence any effects thereof, are smaller.
-Measurements of the jet nuclear modification factor in \pPb collisions, \RpPb, indicate that CNM effects are small for jets at all transverse momentum and pseudorapidity measured at the LHC \cite{2015392, Adam2016, Khachatryan2016b}.
+Measurements of the jet nuclear modification factor in \pPb\ collisions, \RpPb, indicate that CNM effects are small for jets at all transverse momentum and pseudorapidity measured at the LHC \cite{2015392, Adam2016, Khachatryan2016b}.
 This is shown in Figure~\ref{fig:RpPb}.
 Energy densities in the \pbpb, \pPb, and \pp\ collision systems are shown in Figure~\ref{fig:pAenergyDensity}.
 
@@ -141,18 +141,16 @@ Energy densities in the \pbpb, \pPb, and \pp\ collision systems are shown in Fig
 \includegraphics[width=0.75\textwidth]{figures/theory/RpPb}
 \caption{The nuclear modification factor for jets in \pPb\ collisions as measured by CMS in different rapidity intervals.
 Figure from Ref.~\cite{Khachatryan2016b}.}
-\label{fig:pAenergyDensity}
+\label{fig:RpPb}
 \end{center}
 \end{figure}
-
-
 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.85\textwidth]{figures/theory/everything_flows}
 \caption{Snapshots of typical energy density profiles in (left) \pbpb, (middle) \pPb, and (right+far right) \pp\ collisions.
 Figure from Ref.~\cite{Weller:2017tsr}.}
-\label{fig:RpPb}
+\label{fig:pAenergyDensity}
 \end{center}
 \end{figure}
 
@@ -206,7 +204,7 @@ This is typically taken as part of the fragmentation modification as:
 Jet algorithms map the momenta of final state particles into the momenta of jets, and form a core component of any jet measurement.
 They can be broadly categorized as sequential recombination and cone algorithms~\cite{Atkin_2015}. 
 
-Cone algorithms cluster particles in the $\eta-\phi$ space\footnote{The pseudorapidity $\eta = -\ln [\tan(\theta/2)]$ is related to the rapidity and is a spatial coordinate that describes the angle $\theta$ of a particle with respect to the beam axis. $\phi$ is the azimuthal angle around the beam axis. The The coordinate system of detectors is typically based on the $\eta-\phi$ plane.} assuming that the particles of a jet will be located in a conical region of the detector.
+Cone algorithms cluster particles in the $\eta-\phi$ space\footnote{The pseudorapidity $\eta = -\ln [\tan(\theta/2)]$ is related to the rapidity and is a spatial coordinate that describes the angle $\theta$ of a particle with respect to the beam axis. $\phi$ is the azimuthal angle around the beam axis. The coordinate system of detectors is typically based on the $\eta-\phi$ plane.} assuming that the particles of a jet will be located in a conical region of the detector.
 Some examples of cone algorithms are: iterative cone - progressive removal (IC-PR) \cite{ARNISON1983214}, iterative cone - split merge (IC-SM) \cite{Blazey:2000qt}, and SISCone \cite{Salam_2007}.
 
 Sequential recombination algorithms on the other hand work by grouping particles in momentum space, with the result that they have fluctuating areas in $\eta-\phi$ space.
@@ -227,7 +225,7 @@ Figure from Ref.~\cite{Salam:2009jx}.}
 \label{fig:collinearSafe}
 \end{figure}
 
-A schematic describing infrared safety problem is shown in Figure~\ref{fig:infraredSafe}.
+A schematic describing the infrared safety problem is shown in Figure~\ref{fig:infraredSafe}.
 Here an infrared safe algorithm would use the three particles as seeds iteratively find two stable cones.
 An unsafe algorithm however would find three overlapping cones based on the addition of a soft seed.
 
