--- a/qgp_hi.tex
+++ b/qgp_hi.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis-ex.tex
 
-The quark-gluon plasma is a state of matter that comprises of free partons and is formed in extreme conditions of temperature and pressure \cite{SHURYAK198071}.
+The quark-gluon plasma is a state of matter that is comprised of free partons and is formed in extreme conditions of temperature and pressure \cite{SHURYAK198071}.
 First discovered in heavy ion collisions at the Relativistic Heavy Ion Collider (RHIC) \cite{ARSENE20051, Adcox:2004mh, ADAMS2005102, Back:2004je}, its study is motivated by the fact that is the only way to access the dynamics of partons that are otherwise confined within hadrons.
 
 
