adding acknowledgement section

--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -1,12 +1,37 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
 
-I would like to thank my advisors Professor Matthias Grosse Perdekamp and Anne Marie Sickles for their invaluable support and guidance throughout my time at the University of Illinois. Their experience as researchers was extremely valuable for myself and the rest of the group with whom I worked. I started working with Matthias as soon as I arrived in Illinois in 2013. I always appreciated his support, enthusiasm, and knowledge of physics. Besides his tremendous knowledge of nuclear and particle physics, Matthias is someone with whom one can discuss virtually anything; from politics to soccer. Anne was the driving force behind the ATLAS Heavy Ion group at Illinois. Thanks to her, it has grown into a strong group that contributes to the field in many different ways. It was a great experience to work for Matthias and Anne, and I thank them for providing me with the opportunity.
+This thesis would not have been possible without a large number of people.
+First and foremost, I would like to thank my advisor, Professor Anne Sickles.
+Her encouragement and support helped me grow not only as a researcher but also as a person.
+She gave me numerous opportunities to present my research at a variety of conferences and workshops, and trusted me with a variety of responsibilities including deciding where we would go for group lunch.
+Our discussions that ranged from Physics to food made my time in graduate school extremely impactful and enjoyable. 
 
-Martin Rybar, who was the postdoctoral researcher in our group for the majority of  the time I spent working on the ATLAS experiment has been a great advisor and friend. He was always keen to share his knowledge of physics and analysis with me, was there to help whenever I needed it, and taught me a lot of what I know about ATLAS. I definitely progressed much faster in my research thanks to him, and I am very happy for anyone who will get the great opportunity to work with him in the future. 
+I would like to extend a big thank you to Martin Rybar, the post doctoral researcher in our group.
+His unwavering support not only in my research, but also as a friend was invaluable.
+Whether it was discussing how the ATLAS detector works or playing Red Alert and getting a beer after work, he was a huge positive presence in graduate school.
 
-Next, I would like to thank all the members of the ATLAS collaboration for their expertise and for being great colleagues. It was a unique experience being part of such a team, and I am glad to say I got to do so. ATLAS is a large collaboration, and while I would like to thank everyone individually, I specifically want to mention my colleagues from the Heavy Ion group, with whom I worked closely. Thank you Peter Steinburg, Martin Spousta, Aaron Angerami, Brian Cole, Dennis Perepelitsa, Sebastian Tapia for providing insightful physics advice, reading my paper drafts, and for making the Heavy Ion group what it is. 
+Other people I wish to thank include
+\begin{itemize}
+\item My research group members Michael Phipps, Yakov Kulinich, Sebastian Tapia, Virginia Bailey, Tim Rinn, Anabel Romero and Xiaoning Wang for sitting through numerous meetings and practice talks and for providing feedback on my work.
 
-Lastly, want to thank my parents for all their support from the first day I can remember it. I cannot thank them enough for everything they have done. I am very happy they were able to attend my thesis defense, it meant a great deal to me, and I know it meant even more to them. My father, himself a physicist, always was eager to talk to me about my work. We had many interesting conversations in person and over the phone, and he always gave me interesting advice and ideas. My mother was always curious about what I was doing, about CERN, and in general about life as a graduate student. Thank you Daniel, Anton, and Michael for being great brothers and friends. I will be waiting for the days when you will be defending, and I hope things keep going smoothly for you. While she could not be with us now, my late grandmother Anna was always there in my thoughts, and I want to say thank you for everything babushka. Even though we live far away from one another, I always knew I had my family close by, and I cannot thank them enough for this.
+\item My doctoral committee members Matthias Grosse Perdekamp, Bryce Gadway, Lance Cooper, and Aida X El-Khadra.
 
-Thank you family, friends, and colleagues with whom I had the pleasure to talk to, work and spend time with, and in general learn from over these years. 
+\item The Heavy Ion Jet Group, in particular Martin Spousta, Aaron Angerami, Dennis Perepelitsa, Peter Steinberg and Brian Cole for a variety of discussions that broadened my physics knowledge.
+
+\item The ATLAS Collaboration and the large team of people including Iwona Grabowska-Bold, Benjamin Nachman, Mario Martinez, Thomas Le Compte, Filippo Ceradini, Matteo Bauce, Gideon Bella, Maxwell Charles Baugh, Evgenii Baldin, Abi Soffer, Yuya Kano, Yann Coadou, Jiangyong Jia, Guillaume Unal and David Stoker, who read numerous drafts of my paper and provided crucial feedback.
+\end{itemize}
+
+
+Outside of my research, I would like to extend gratitude towards my ballroom dance team.
+I joined the team when I first started in graduate school, and it very quickly became the center of my social life.
+I would like to especially thank my dance partners Anna Kalinowski and Bridget Regan for the dances that let me get away from work, and for their patience when I was not available for practice because of my research.
+I would also be remiss if I did not mention my coaches over the years: Kato Lindholm, Alex Tecza, Kirsti Roslender and Peter Minkov.
+
+I would also like to acknowledge the love and support from the friends I have made over the past five years, including but certainly not limited to Parul Agrawal, John Hadley, David Meldgin, Varun Badrinath, Anna Vardanyan, Katie Bolan, Timothy Chin and Yana Garmash.
+
+And last but certainly not least, I have to thank my parents and my brother. None of this would have been possible without them cheering me on and supporting me all my life. Their unconditional support and their pride in my work was humbling, and this is for them. \\ \\ \\ 
+
+
+
+\epigraph{If I have seen further it is by standing on the shoulders of Giants}{\textit{Sir Isaac Newton}}
