--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -31,6 +31,8 @@
 %\usepackage{sectsty}
 %\chapterfont{\centering}
 \usepackage[pagestyles]{titlesec}
+\usepackage{epigraph} 
+ 
  
 \titleformat{\chapter}[display]
    {\normalfont\huge\bfseries\centering}{\centering\chaptertitlename\ \thechapter}{20pt}{\Huge}
@@ -182,13 +184,9 @@ For my Mother, Father, and Brother
 % etc.
 
 
-%\chapter*{Acknowledgments}
-%\input{acknowledgments.tex}
-%
-%\begin{dedication}
-%To Anna Glazatova
-%\end{dedication}
-%
+\chapter*{Acknowledgments}
+\input{acknowledgments.tex}
+
 \tableofcontents
 %% \listoftables
 %% \listoffigures
