done with acknowledgements

--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -1,36 +1,40 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
 
-This thesis would not have been possible without a large number of people.
 First and foremost, I would like to thank my advisor, Professor Anne Sickles.
 Her encouragement and support helped me grow not only as a researcher but also as a person.
-She gave me numerous opportunities to present my research at a variety of conferences and workshops, and trusted me with a variety of responsibilities including deciding where we would go for group lunch.
-Our discussions that ranged from Physics to food made my time in graduate school extremely impactful and enjoyable. 
+Our discussions ranged from physics to food and made my time in graduate school enjoyable and fulfilling. 
+I feel extremely lucky to be her student and could not have asked for a better advisor.
 
 I would like to extend a big thank you to Martin Rybar, the post doctoral researcher in our group.
-His unwavering support not only in my research, but also as a friend was invaluable.
-Whether it was discussing how the ATLAS detector works or playing Red Alert and getting a beer after work, he was a huge positive presence in graduate school.
+His constant support not only in my research but also as a friend was invaluable.
+Whether it was discussing how the ATLAS detector works or playing Red Alert and getting a beer after work, he was a huge positive presence in graduate school and I will miss working with him
 
 Other people I wish to thank include
 \begin{itemize}
-\item My research group members Michael Phipps, Yakov Kulinich, Sebastian Tapia, Virginia Bailey, Tim Rinn, Anabel Romero and Xiaoning Wang for sitting through numerous meetings and practice talks and for providing feedback on my work.
+
+\item My research group members Michael Phipps, Yakov Kulinich, Sebastian Tapia, Virginia Bailey, Tim Rinn, Anabel Romero, and Xiaoning Wang, for sitting through numerous meetings and practice talks and for providing feedback on my work.
 
 \item My doctoral committee members Matthias Grosse Perdekamp, Bryce Gadway, Lance Cooper, and Aida X El-Khadra.
 
-\item The Heavy Ion Jet Group, in particular Martin Spousta, Aaron Angerami, Dennis Perepelitsa, Peter Steinberg and Brian Cole for a variety of discussions that broadened my physics knowledge.
+\item The Heavy-Ion Group, in particular Martin Spousta, Aaron Angerami, Dennis Perepelitsa, Peter Steinberg, and Brian Cole, for a variety of discussions that broadened my physics knowledge.
 
-\item The ATLAS Collaboration and the large team of people including Iwona Grabowska-Bold, Benjamin Nachman, Mario Martinez, Thomas Le Compte, Filippo Ceradini, Matteo Bauce, Gideon Bella, Maxwell Charles Baugh, Evgenii Baldin, Abi Soffer, Yuya Kano, Yann Coadou, Jiangyong Jia, Guillaume Unal and David Stoker, who read numerous drafts of my paper and provided crucial feedback.
+\item The ATLAS Collaboration and the large team of people including Iwona Grabowska-Bold, Benjamin Nachman, Mario Martinez, Chiara Roda, Thomas Le Compte, Filippo Ceradini, Matteo Bauce, Gideon Bella, Maxwell Charles Baugh, Evgenii Baldin, Abi Soffer, Yuya Kano, Yann Coadou, Jiangyong Jia, Guillaume Unal, and David Stoker, who read numerous drafts of my research paper and provided crucial feedback.
+
 \end{itemize}
 
-
 Outside of my research, I would like to extend gratitude towards my ballroom dance team.
-I joined the team when I first started in graduate school, and it very quickly became the center of my social life.
-I would like to especially thank my dance partners Anna Kalinowski and Bridget Regan for the dances that let me get away from work, and for their patience when I was not available for practice because of my research.
-I would also be remiss if I did not mention my coaches over the years: Kato Lindholm, Alex Tecza, Kirsti Roslender and Peter Minkov.
+I joined the team when I first started in graduate school and it very quickly became the center of my social life.
+I would like to especially thank my dance partner Anna Kalinowski for the dances that let me get away from work and for her patience and support when I was not available for practice because of my research.
+I would also be remiss if I did not mention my dance coaches over the years: Kato Lindholm, Alex Tecza, Kirsti Roslender, Frank Gillitzer and Peter Minkov.
 
-I would also like to acknowledge the love and support from the friends I have made over the past five years, including but certainly not limited to Parul Agrawal, John Hadley, David Meldgin, Varun Badrinath, Anna Vardanyan, Katie Bolan, Timothy Chin and Yana Garmash.
+I would like to acknowledge the love and support from my friends, including but certainly not limited to Parul Agrawal, John Hadley, Bridget Regan, David Meldgin, Varun Badrinath, Yana Garmash, Anna Vardanyan, Katie Bolan, Timothy Chin, Mike Antoline, Michelle Victora, Ashwathi Iyer and Ben Osherson.
+In particular, I want to thank Akshan Singh and Harsh Banwait for their friendship over the past decade.
+I could not have asked for better people to have my back.
 
-And last but certainly not least, I have to thank my parents and my brother. None of this would have been possible without them cheering me on and supporting me all my life. Their unconditional support and their pride in my work was humbling, and this is for them. \\ \\ \\ 
+Last but certainly not least, I have to thank my parents and my brother.
+None of this would have been possible without them cheering me on and supporting me all my life.
+Their unconditional love and unyielding support has been a crucial part of shaping me into the person I am, and this is for them. \\ \\ \\ 
 
 
 
