minor changes in acknowlegdement for anne/martin

--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -3,12 +3,12 @@
 
 First and foremost, I would like to thank my advisor, Professor Anne Sickles.
 Her encouragement and support helped me grow not only as a researcher but also as a person.
-Our discussions ranged from physics to food and made my time in graduate school enjoyable and fulfilling. 
+Our discussions ranged from physics to food and made my time in graduate school rewarding and enjoyable. 
 I feel extremely lucky to be her student and could not have asked for a better advisor.
 
 I would like to extend a big thank you to Martin Rybar, the post doctoral researcher in our group.
 His constant support not only in my research but also as a friend was invaluable.
-Whether it was discussing how the ATLAS detector works or playing Red Alert and getting a beer after work, he was a huge positive presence in graduate school and I will miss working with him
+Whether it was discussing how the ATLAS detector works or playing Red Alert and getting a beer after work, he was a huge positive presence in graduate school and I will miss working with him.
 
 Other people I wish to thank include
 \begin{itemize}
